fix section_2 visibility-hidden

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,9 +111,22 @@ h1, h2, h3, h4, h5, h6, p, ul {
     padding-bottom: 120px;
 }
 
+.section:nth-child(2) .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+
 main .section:nth-child(3) .container{
     padding: 32px 0;
-    
+
 }
 
 .section-title {
